--- a/DashboardTemplate.Rmd
+++ b/DashboardTemplate.Rmd
@@ -56,10 +56,23 @@ Overview of analysis, the question we're trying to answer, and our insights (lin
 ### Job Placement Rate across FSB (Bar Chart, Overall placement by year)
 
 ```{r,echo=FALSE}
-job_count = count(as.numeric(FSB_job$survey_offers))
+# Cleaning and transforming data
+library(ggplot2)
+library(plotly)
 
-FSB_placement_bar = ggplot(FSB_job, aes(x = year.x, y = job_count, fill = year.x))+
-  geom_bar(position="dodge", stat="identity")+ xlab("Year")+ylab("Salary")+ labs(fill = "Year")
+FSB_job_1 <- subset(FSB_job, !(major1 == "Interdisciplinary Bus Managemt" |  
+                               major1 == "Management and Organizations" | 
+                               survey_offers == "NA" |  
+                               survey_offers == "na" | 
+                               survey_offers == "multiple" |
+                               survey_offers == "+2"))
+
+FSB_job_1$survey_offers = as.numeric(FSB_job_1$survey_offers)
+
+
+##. This is currently only taking the max of each year rather than the total 
+FSB_placement_bar = ggplot(FSB_job_1, aes(x = year.x, y = survey_offers, fill = year.x))+
+  geom_bar(position="dodge", stat="identity")+ xlab("Year")+ylab("offers")+ labs(fill = "Year")
 
 FSB_placement_bar
 ```
@@ -68,6 +81,11 @@ FSB_placement_bar
 
 ```{r,echo=FALSE}
 
+## having trouble graphing the line chart, i dont know why its so ugly
+
+lines_by_major = ggplot(FSB_job_1, aes(x = year.x, y = survey_offers, color = major1,fill = major1, group = major1)) +geom_line(size=1) + geom_point()
+
+lines_by_major
 ```
 
 
@@ -76,10 +94,8 @@ FSB_placement_bar
 ### Job Placement Rate by Major (Bar chart, overall placement by year, facet wrap by major, potentially add in extra fill by count of offers)
 
 ```{r,echo=FALSE}
-library(ggplot2)
-library(plotly)
 
-sal_by_major_bar = ggplot(FSB_job1, aes(x = year.x, y = survey_salary, fill = year.x))+
+sal_by_major_bar = ggplot(FSB_job_1, aes(x = year.x, y = survey_salary, fill = year.x))+
   geom_bar(position="dodge", stat="identity")+ xlab("Year")+ylab("Salary")+ labs(fill = "Year")
   
 sal_by_major_bar + facet_wrap(~ major1)
@@ -111,11 +127,11 @@ fsb_ovr_box
 
 ```{r,echo=FALSE}
 
-FSB_job1 <- subset(FSB_job, !(major1 == "Interdisciplinary Bus Managemt" | major1 == "Management and Organizations"))
+
 
 ## med_sal = median(FSB_job$survey_salary), trying to use either mean or median but wont graph when i do , my understanding is that it is currently using the max
 
-sal_major_bar = ggplot(FSB_job1, aes(fill= year.x, y=survey_salary, x= major1)) + 
+sal_major_bar = ggplot(FSB_job_1, aes(fill= year.x, y=survey_salary, x= major1)) + 
     geom_bar(position="dodge", stat="identity")+xlab("Major")+ylab("Salary")+ labs(fill = "Year")+
   theme(axis.text.x = element_text(angle = 90))
 
@@ -130,7 +146,7 @@ sal_major_bar
 ### Salary by Major by Year (Box Plots of Salary, side-by-side for each year, facet wrap by major)
 
 ```{r}
-fsb_mjr_sal_box = ggplot(FSB_job1, aes(x = year.x, y = survey_salary, color = year.x))+
+fsb_mjr_sal_box = ggplot(FSB_job_1, aes(x = year.x, y = survey_salary, color = year.x))+
   xlab("Year")+ylab("Salary")+ labs(color = "Year")+
   geom_boxplot()
 
