Note for dashboard adjustments
Left comment on dashboard rmd to remind us to explain the purpose of our graphs.

--- a/Dashboard.Rmd
+++ b/Dashboard.Rmd
@@ -171,3 +171,12 @@ fsb_mjr_sal_box = FSB_job_1 |>
 ggplotly(fsb_mjr_sal_box )
 ```
 
+
+
+
+
+
+annotate the purpose of each graph and why we included it.
+
+
+
